--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -1,35 +1,37 @@
-/* Contact.css */
-.contact {
-    text-align: center;
-    margin: 20px;
-  }
-  
-  .contact h2 {
-    font-size: 2.2em;
-    margin-bottom: 20px;
-  }
-  
-  .contact p {
-    font-size: 1.2em;
-    color: #666;
-  }
-  /* For screens smaller than 768px */
-@media (max-width: 768px) {
-    .navbar ul {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .navbar ul li {
-      margin: 10px 0;
-    }
-  
-    .player-list {
-      flex-direction: column;
-    }
-  
-    .player-card {
-      width: 90%;
-    }
-  }
-  
+/* src/pages/Contact.css */
+.contact-section {
+  padding: 20px;
+}
+
+form {
+  margin-bottom: 20px;
+}
+
+form input, form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+form button {
+  background-color: #0073e6;
+  color: white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+form button:hover {
+  background-color: #005bb5;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+ul li {
+  margin-bottom: 10px;
+}
