--- a/src/pages/Teams.css
+++ b/src/pages/Teams.css
@@ -1,16 +1,17 @@
-/* Teams.css */
-.teams {
-    text-align: center;
-    margin: 20px;
-  }
-  
-  .teams h2 {
-    font-size: 2.2em;
-    margin-bottom: 20px;
-  }
-  
-  .teams p {
-    font-size: 1.2em;
-    color: #666;
-  }
-  
+/* src/pages/Teams.css */
+.layered-section {
+  padding: 20px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+ul li {
+  margin-bottom: 10px;
+}
+
+h3 {
+  color: #0073e6;
+}
